# Music-Indo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CoAuthor  Cuki  Dockerfile  LICENSE  PRIVACY.md  Procfile  Py.py  README.md  absen.py  app.json  app.py  bak.sh  cookies.txt  cookies.txt.bak  ganti.sh  genstring.py  haku  haku.txt  heroku.yml  install_node.sh  js.py  katak.py  pantek.py  push  pyproject.toml  readme.md  req  requirements.txt  run cmd.txt  sample.env  setup  start  teating.py
.github/: README.md  dependabot.yml
.github/workflows/: Pylint.yml  update-deps.yml
ChiefMusic/: __init__.py  __main__.py  logging.py  misc.py
ChiefMusic/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
ChiefMusic/plugins/: __init__.py
ChiefMusic/plugins/admins/: auth.py  callback.py  loop.py  pause.py  resume.py  seek.py  shuffle.py  skip.py  stop.py  vcmute.py
ChiefMusic/plugins/bot/: help.py  inline.py  privacy.py  settings.py  start.py
ChiefMusic/plugins/misc/: autoleave.py  bot_add_left.py  cleanmode.py  seeker.py
ChiefMusic/plugins/play/: channel.py  live.py  play.py  playlist.py  playmode.py  stream.py  toptracks.py
ChiefMusic/plugins/sudo/: autoend.py  blacklistchat.py  block.py  dev.py  globalban.py  heroku.py  logger.py  maintenance.py  private.py  sudoers.py  videolimit.py  videomode.py
ChiefMusic/plugins/tools/: active.py  backup.py  languages.py  lyrics.py  ping.py  queue.py  reload.py  songs.py  speedtest.py  stats.py
ChiefMusic/utils/: __init__.py  channelplay.py  exceptions.py  formatters.py  inlinequery.py  keyboard.py  logger.py  pastebin.py  permissions.py  sys.py  thumbnails.py
ChiefMusic/utils/database/: __init__.py  assistantdatabase.py  memorydatabase.py  mongodatabase.py
ChiefMusic/utils/decorators/: __init__.py  admins.py  language.py  play.py
ChiefMusic/utils/inline/: __init__.py  help.py  play.py  playlist.py  queue.py  settings.py  song.py  start.py  stats.py
ChiefMusic/utils/stream/: autoclear.py  queue.py  stream.py
MusicIndo/: __init__.py  __main__.py  logging.py  misc.py
MusicIndo/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
MusicIndo/plugins/: __init__.py
MusicIndo/plugins/admins/: auth.py  callback.py  loop.py  mute.py  pause.py  resume.py  seek.py  shuffle.py  skip.py  stop.py  unmute.py  vcmute.py
MusicIndo/plugins/bot/: help.py  inline.py  mustjoin.py  privacy.py  settings.py  start.py
MusicIndo/plugins/misc/: autoleave.py  (+5 more)
MusicIndo/utils/: __init__.py  assistant.py  channelplay.py  cleanmode.py  error.py  exceptions.py  fallback.py  filter.py  formatters.py  image.py  inlinefunction.py  inlinequery.py  keyboard.py  logger.py  note_funcs.py  pastebin.py  permissions.py  sys.py  thumbnails.py  thumbnails.py.bak
YukkiMusic/: __init__.py  __main__.py  logging.py  misc.py
YukkiMusic/core/: bot.py  call.py  dir.py  git.py  mongo.py  userbot.py
YukkiMusic/plugins/: __init__.py
YukkiMusic/utils/: __init__.py  assistant.py  channelplay.py  cleanmode.py  exceptions.py  formatters.py  functions.py  inlinequery.py  keyboard.py  logger.py  pastebin.py  permissions.py  sys.py  thumbnails.py
config/: README.md  __init__.py  config.py
config/cookies/: cookies.txt
cookies/: cookies.txt
strings/: README.md  __init__.py  command.yml  commands.yml  readme.md
strings/cmds/: ar.yml  ckb.yml  en.yml  tr.yml
strings/helpers/: id.yml
strings/langs/: ar.yml  as.yml  ckb.yml  en.yml  hi.yml  id.yml  ku.yml  tr.yml
(+235 files in other folders)
